--- a/main.html
+++ b/main.html
@@ -44,7 +44,7 @@
 				<p>Гусевской хрустальный завод, который теперь носит имя своего основателя Акима Мальцова, — один из легендарных российских брендов, хорошо известных во всем мире.</p>
 
 				<div class="btn-more" style="margin-top: 35px; margin-bottom: 30px;">
-					<a class="btn" href="catalog.html">Перейти в каталог  	 &rarr;</a>
+					<a class="btn" href="temp/catalog.html">Перейти в каталог  	 &rarr;</a>
 				</div>
 			</div>			
 		</div>
@@ -54,7 +54,7 @@
 				<h2>ГУСЕВСКИЙ ХРУСТАЛЬНЫЙ ЗАВОД ИМ. А. МАЛЬЦОВА</h2>
 				<p>Славная история Гусевского хрустального завода насчитывает несколько веков. Когда-то, в старину, талантливые умельцы создавали сервизы для императорского двора. Их секреты были бережно пронесены сквозь столетия, сохранены и приумножены потомками.</p>
 				<div class="btn-more" style="margin-top: 35px; margin-bottom: 30px;">
-					<a class="btn" href="history.html">История завода &rarr;</a>
+					<a class="btn" href="temp/about_us/history.html">История завода &rarr;</a>
 				</div>
 			</div>			
 		</div>
@@ -65,7 +65,7 @@
 				<p>Если вы хотите узнать, как варят хрусталь, как выдувают из него замысловатые фигуры, как наносят на них затейливые узоры, увидеть весь процесс - вплоть до упаковки готовых изделий - добро пожаловать к нам на экскурсию.</p>
 
 				<div class="btn-more" style="margin-top: 35px; margin-bottom: 30px;">
-					<a class="btn" href="ekskursii_na_proizvodstvo.html">Записаться на экскурсию &rarr;</a>
+					<a class="btn" href="temp/about_us/ekskursii_na_proizvodstvo.html">Записаться на экскурсию &rarr;</a>
 				</div>
 			</div>			
 		</div>
